add code to HTML file

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,10 +9,63 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img src="/assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+
     <main>
-      <!-- Student code goes here -->
+      <!--HTML Section-->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>the character set UTF 8 tells the browser how to understand and display the characters</li>
+          <li><strong>Head Element</strong> contains information about the webpage.</li>
+          <li><strong>Body Element</strong> represents the visible content shown to the user</li>
+          <li><strong>Footer Element</strong> define information that typically appears at the bottom of a document, such as contact info </li>
+        </ul>
+      </section>
+        <br>
+      <!--CSS Section-->
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+          <ul>
+            <li>Cascading Style Sheets</li>
+            <li>Used to format and style webpages</li>
+            <li><strong>Selectors</strong> target specific HTML elements</li>
+            <li><strong>Properties</strong> determine the visual presentation or behavior of the selected elements</li>
+            <li><strong>Values</strong> are assigned to CSS properties to define specific styles</li>
+          </ul>
+      </section>
+        <br>
+      <!--JavaScript Section-->
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li><strong>Variables</strong> are used to store and manipulate data</li>
+          <li><strong>Data Types</strong> Numbers, Strings, Booleans, Arrays, Objects, Null, Undefined, Symbol</li>
+          <li><strong>Functions</strong> are blocks of reusable code that perform a specific task</li>
+          <li><strong>Control Flow</strong> the order in which statements are executed</li>
+        </ul>
+      </section>
+      <!--Git Section-->
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li><strong>Git</strong> helps you keep track of changes in your code and allows you to save different versions of your code over time</li>
+          <li><strong>CD command</strong> change current directory</li>
+          <li><strong>ls command</strong> lists the contents of current directory</li>
+          <li><strong>git status</strong> This command shows the current state of your Git repository</li>
+          <li><strong>pwd command</strong> displays the path of the current directory you are in</li>
+          <li><strong>git init</strong> initializes a new Git repository in your current directory. It sets up the necessary files and folders for Git to start tracking changes in your code</li>
+          <li><strong>git add -A</strong> commit all files in the working branch</li>
+          <li><strong>git add</strong> stages changes in your code to be included in the next commit</li>
+          <li><strong>git commit</strong> creates a new commit, saving the staged changes to your Git repository</li>
+          <li><strong>git push</strong> upload your local commits to a remote repository, such as GitHub or GitLab</li>
+          <li><strong>git checkout -b</strong> switch to newly created branch</li>
+          <li><strong>git main</strong> switch to main branch</li>
+          <li><strong>git pull</strong> fetch and merge the latest changes from the remote main branch</li>
+          <li><strong>git checkout -a</strong> inspects all branches</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
