--- a/assets/index.html
+++ b/assets/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head >
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -56,13 +57,12 @@
           <li><strong>git status</strong> This command shows the current state of your Git repository</li>
           <li><strong>pwd command</strong> displays the path of the current directory you are in</li>
           <li><strong>git init</strong> initializes a new Git repository in your current directory. It sets up the necessary files and folders for Git to start tracking changes in your code</li>
-          <li><strong>git add -A</strong> commit all files in the working branch</li>
-          <li><strong>git add</strong> stages changes in your code to be included in the next commit</li>
-          <li><strong>git commit</strong> creates a new commit, saving the staged changes to your Git repository</li>
-          <li><strong>git push</strong> upload your local commits to a remote repository, such as GitHub or GitLab</li>
+          <li><strong>git add -A</strong> (stage the changes) commit all files in the working branch</li>
+          <li><strong>git commit -m "add your note/description"</strong> creates a new commit, saving the staged changes to your Git repository</li>
+          <li><strong>git pull origin"name"</strong> fetch and merge the latest changes from the remote main branch</li>
+          <li><strong>git push origin feature/add-html</strong> upload your local commits to a remote repository, such as GitHub or GitLab</li>
           <li><strong>git checkout -b</strong> switch to newly created branch</li>
           <li><strong>git main</strong> switch to main branch</li>
-          <li><strong>git pull</strong> fetch and merge the latest changes from the remote main branch</li>
           <li><strong>git checkout -a</strong> inspects all branches</li>
         </ul>
       </section>
